==> Runhui-Wang/Efm32GG11_TTV/ttv_cli_kernel_micriumos/user_UFC_cmd.c <==
#define UFC_DEVICE_AS6031
#include "user_UFC_cmd.h"
#include <stdio.h>
#include "user_spi_interface.h"
#include "user_tools.h"
#include "spidrv.h"
#include "sl_spidrv_instances.h"
#include <stdint.h>
#include <os.h>
#include "user_AS6031_parameter.h"
#include "sl_sleeptimer.h"
#define SPI_HANDLE                  sl_spidrv_exp_handle
	#define BLOCKSIZE_MAX 128
	#define BLOCKSIZE_MAX 1024
#define BLOCKSIZE_MAX 64 //default

void Waiting_For_INTN_Flag2(int flag_no, uint32_t timeout)
{
  //#define _DEBUGGGING_FUNCTION
  uint32_t tickstart;
  
  /* Init tickstart for timeout management */
  tickstart = sl_sleeptimer_get_tick_count64();

  /* step a - Waiting for the interrupt INTN (low active) */
  while(GPIO_PinInGet(gpioPortA, 12))
  {
    /* Timeout management */
    if ((((sl_sleeptimer_get_tick_count64() - tickstart) >=  timeout) && (timeout != 0xFFFFFFFFU)) || (timeout == 0U))
    {
#ifdef _DEBUGGGING_FUNCTION
      printf("TIMEOUT after %u ms\n", timeout);
      printf("Bit No. %u are not detected\n", flag_no);
#endif
#undef _DEBUGGGING_FUNCTION
      return;
    }
  }
  
  /* step b - Cleck interrupt flag on reading SRR_IRQ_FLAG */
  int interrupt = 0;
  int check_int_mask = 0;
  if (flag_no == 0) {check_int_mask = TSQ_FNS_mask;}
  if (flag_no == 1) {check_int_mask = FW_TRANS_FNS_mask;}
  if (flag_no == 2) {check_int_mask = BLD_FNS_mask;}
  if (flag_no == 3) {check_int_mask = CHKSUM_FNS_mask;}
  if (flag_no < 0 || flag_no > 3) {Write_Opcode(RC_IF_CLR); return;}
  do {
    interrupt = Read_Dword(RC_RAA_RD_RAM, 0xE0);
    interrupt &= check_int_mask;  
  } while (interrupt != check_int_mask);
  
  /* step c - Clear interrupt flag register by sending RC_IF_CLR */
  Write_Opcode(RC_IF_CLR);
}

void Waiting_For_INTN_Poll_Status(uint32_t timeout)
{
  uint32_t tickstart;
  //uint8_t spiRX[0];
  
  /*Init tickstart for timeout management */
  tickstart = sl_sleeptimer_get_tick_count64();

  /*step a - Waiting for the interrupt INTN (low active) */
  while(GPIO_PinInGet(gpioPortA, 12))
  {
    /* Polling of System Status byte */
    //spiRX[0] = System_Status();
    
    /* Post precessing of System Status */
    /* ...in progress */
    
    /* Timeout management */
    if ((((sl_sleeptimer_get_tick_count64() - tickstart) >=  timeout) && (timeout != 0xFFFFFFFFU)) || (timeout == 0U))
    {
      printf("TIMEOUT after %u ms\n", (unsigned int)timeout);
    }
  }
}

uint32_t Read_Dword_with_Status(uint8_t rd_opcode, uint8_t address)
{
//#define _DEBUGGGING_FUNCTION
  
  /* Timeout duration in millisecond [ms] */
  uint8_t timeout = 10;
  uint8_t spiTX_pre[2];
  uint8_t spiTX_post[1];
  uint8_t spiRX[4];
  uint8_t spiRX_preSYS[1];
  uint8_t spiRX_postSYS[1];
  uint32_t temp_u32 = 0;
  
  uint8_t same_SYS_bits = 0;
  uint8_t all_SYS_bits = 0;
  uint8_t pre_SYS_bits = 0;
  uint8_t post_SYS_bits = 0;
  //uint8_t pre_MT_REQ_CTR = 0; //variable 'post_MT_REQ_CTR' set but not used [-Wunused-but-set-variable]
  //uint8_t post_MT_REQ_CTR = 0; //variable 'post_MT_REQ_CTR' set but not used [-Wunused-but-set-variable]
  
  int run_pass;
  int well_done;

  spiTX_pre[0] = rd_opcode;
  spiTX_pre[1] = address;
  spiTX_post[0] = RC_RD_STATUS;
  
  uint8_t error_mask = 0;
  
  if (rd_opcode==RC_RAA_RDS_RAM || rd_opcode==RC_RAA_RDS_NVRAM) {
  run_pass = 1;  
    
    do {
      /* 1. Put SSN low - Activate */
      Set_SSN(LOW);
      
      /* 2. Transmit register address */
      SPIDRV_MTransmit  (SPI_HANDLE,
      spiTX_pre,
      2,
      callback2
      );
      /* 3. Read four bytes with System Status byte first */
      SPIDRV_MReceive  (SPI_HANDLE,
      spiRX_preSYS,
      1,
      callback2
      );
      SPIDRV_MReceive  (SPI_HANDLE,
      spiRX,
      4,
      callback2
      );
      
      /* 4. Put SSN high - Deactivate */
      Set_SSN(HIGH);
      
      /* tpwssn = serial clock time period (tsck = 125 ns) */
      /* SSN pulse width between two cycles */
      
      /* 5. Read System Status at the end */
      /* 5.1 Put SSN low - Activate */
      Set_SSN(LOW);
      
      /* 5.2 Transmit register address */
      SPIDRV_MTransmit  (SPI_HANDLE,
                         spiTX_post,
           1,
           callback2
           );
      
      /* 5.3 Read only System Status byte */
      SPIDRV_MReceive  (SPI_HANDLE,spiRX_postSYS,1,callback2 );
      
      /* 5.4 Put SSN high - Deactivate */
      Set_SSN(HIGH);
      
      /* Evaluation of System Status (pre- and post-) */
      /* Defintion of System Status Error */
      error_mask = 0xE3; /* 1110 0011 */

      /* [Bit0]   0x01 -> RAA_BUSY (internal processes ongoing)          */
      /* [Bit1]   0x02 -> TSQ_BUSY_PRED (remaining idle time prediction) */
      /* [Bit3:2] 0x0C -> MT_REQ_CTR (Measure Task Reuest Counter)       */
      /* [Bit4]   0x10 -> MCT_STATE (Status of Measure Cycle Timer)      */
      /* [Bit5]   0x20 -> COM_FAIL (Communication Failed)                */
      /* [Bit6]   0x40 -> RST_FLAG (clear RST_FLAG after reading)        */
      /* [Bit7]   0x80 -> ERR_FLAG (only one bit in 0xE1 is set)         */

      /* Comparision of System Status (spiRX_preSYS and spiRX_postSYS) */
      same_SYS_bits = (spiRX_preSYS[0] & spiRX_postSYS[0]);
      all_SYS_bits = (spiRX_preSYS[0] | spiRX_postSYS[0]);
      pre_SYS_bits = spiRX_preSYS[0] - same_SYS_bits;
      post_SYS_bits = spiRX_postSYS[0] - same_SYS_bits;
      
      //pre_MT_REQ_CTR = convert_gray2dec((spiRX_preSYS[0]&0x0C)>>2);
      //post_MT_REQ_CTR = convert_gray2dec((spiRX_postSYS[0]&0x0C)>>2);
      
      
      printf("(%02X:%02X:%02X:%02X)", all_SYS_bits, pre_SYS_bits, same_SYS_bits, post_SYS_bits);
      if (((spiRX_preSYS[0] & error_mask) != 0) || ((spiRX_postSYS[0] & error_mask) != 0)) {
        /* Error Handling - system status shows errors */
        
//        printf(" ");
//        
//        /* PRE SYSTEM STATUS */
//        /* ----------------- */
//        /* RAA_BUSY is set -> ... */
//        if ((spiRX_preSYS[0]&0x01) != 0) {
//          printf("A");
//        }
//
//        /* TSQ_BUSY_PRED is set -> ... */
//        if ((spiRX_preSYS[0]&0x02) != 0) {
//          printf("B");
//        }
//        
//        /* COM_FAIL is set -> ... */
//        if ((spiRX_preSYS[0]&0x20) != 0) {
//          printf("C");
//        }
//        
//        /* RST_FLAG is set -> ... */
//        if ((spiRX_preSYS[0]&0x40) != 0) {
//          printf("D");
//        }
//        
//        /* ERR_FLAG is set -> ... */
//        if ((spiRX_preSYS[0]&0x80) != 0) {
//          printf("E");
//        }
//
//        /* POST SYSTEM STATUS */
//        /* ------------------ */
//        /* RAA_BUSY is set -> ... */
//        if ((spiRX_postSYS[0]&0x01) != 0) {
//          printf("a");
//        }
//
//        /* TSQ_BUSY_PRED is set -> wait at least USM_PAUSE (20ms) */
//        if ((spiRX_postSYS[0]&0x02) != 0) {
////          HAL_Delay(2); /* delay of 20ms */
//          printf("b");
//        }
//        
//        /* COM_FAIL is set -> ... */
//        if ((spiRX_postSYS[0]&0x20) != 0) {
//          printf("c");
//        }
//        
//        /* RST_FLAG is set -> ... */
//        if ((spiRX_postSYS[0]&0x40) != 0) {
//          printf("d");
//        }
//        
//        /* ERR_FLAG is set -> ... */
//        if ((spiRX_postSYS[0]&0x80) != 0) {
//          printf("e");
//        }

#ifdef _DEBUGGGING_FUNCTION
        printf("x=%02X<>%02X ", spiRX_preSYS[0], spiRX_postSYS[0]);
        /* repeat reading with fixed delay */
//        HAL_Delay(1); /* delay of 1ms */
        Delay_100us(10); /* delay of 1ms */
#endif
        
        /* counts the processes */
        run_pass++;
        
        well_done = 0;
      } else {
        /* both system status without any errors */
        well_done = 1;
      }
      
    } while (well_done == 0); /* end of do{}-while loop */
    
    /* reading without any errors */
    printf(", Run = %u, ", run_pass);
    puts("RD OK");
    
  } else {
    /* 1. Put SSN low - Activate */
    Set_SSN(LOW);
    
    /* 2. Transmit register address */
    SPIDRV_MTransmit  (SPI_HANDLE,spiTX_pre,2,callback2 );
      
    /* 3. Read four bytes */
    SPIDRV_MReceive  (SPI_HANDLE,spiRX,4,callback2 );

    /* 4. Put SSN high - Deactivate */
    Set_SSN(HIGH);
  }
  
  /*Concatenate of bytes (from MSB to LSB) */
  temp_u32 = (spiRX[0]<<24) + (spiRX[1]<<16) + (spiRX[2]<<8) + (spiRX[3]);
  
#undef _DEBUGGGING_FUNCTION
  
  return temp_u32;
}

int System_Status(void)
{
  /* Timeout duration in millisecond [ms] */
  uint8_t timeout = 10; 
  
  uint8_t spiTX[1];
  uint8_t spiRX[1];

  spiTX[0] = RC_RD_STATUS; //Opcode

  /* 1. Put SSN low - Activate */
  Set_SSN(LOW);
  
  /* 2. Transmit opcode */
  SPIDRV_MTransmit  (SPI_HANDLE,spiTX,1,callback2 );

  
  /* 3. Read one byte */
  SPIDRV_MReceive  (SPI_HANDLE,spiRX,1,callback2 );

  /* 4. Put SSN high - Deactivate */
  Set_SSN(HIGH);

  return spiRX[0];
}

void SYS_Status_Delay(uint32_t Delay)
{
  uint32_t tickstart = sl_sleeptimer_get_tick_count64();
  uint32_t wait = Delay;
  uint8_t ctr_new = 0;
  uint8_t ctr_old = 0;
  
  int sys_start = 0;

  /* Add a period to guaranty minimum wait */
  if (wait < 0xFFFFFFFFU)
  {
    wait += (uint32_t)(1);
  }
  
  puts("Reading of accumulated System Status");
  printf(" [Bit3:2] -> MT_REQ_CTR = ");
  while((sl_sleeptimer_get_tick_count64() - tickstart) < wait)
  {
    /* Accumulated System Status*/
    sys_start |= System_Status();
    
    ctr_new = convert_gray2dec( (sys_start & 0x0C)>>2);
    
    if (ctr_new == ctr_old)
    { } else
    {
      /* show only changes */
      printf("%u", ctr_new);
    }
    ctr_old = ctr_new;
    sys_start &= 0xF3;
  }
  printf("\n");

  /* provide Status if not zero */
  if (sys_start!=0) 
  {
    printf("Accumulated SYS_STATUS = 0x%02X\n", sys_start);
    if ((sys_start&0x01)!=0) printf(" [Bit0] -> RAA_BUSY (internal processes ongoing)\n");
    if ((sys_start&0x02)!=0) printf(" [Bit1] -> TSQ_BUSY_PRED (remaining idle time prediction)\n");
    if ((sys_start&0x20)!=0) printf(" [Bit5] -> COM_FAIL (Communication Failed)\n");
    if ((sys_start&0x40)!=0) printf(" [Bit6] -> RST_FLAG (clear RST_FLAG after reading)\n");
    if ((sys_start&0x80)!=0) printf(" [Bit7] -> ERR_FLAG (only one bit in 0xE1 is set)\n");
  }
  
  /* provide Status anytime */
  if ((sys_start&0x10)!=0) {
    printf(" [Bit4] -> MCT_STATE = ON (Status of Measure Cycle Timer)\n");
  } else {
    printf(" [Bit4] -> MCT_STATE = OFF (Status of Measure Cycle Timer)\n");
  }
  
}
